# instatrack

demos/: CMakeLists.txt  base.hpp  color.cpp  corner_harris.cpp  instatrack.cpp  multi_camera.cpp  my_chessboard.cpp  naive_chessboard.cpp  naive_circles.cpp  threshold.cpp  util.hpp
experiments/: color_dots_chessboard.cpp  connected_components.cpp  corner_experiment.cpp  islands.cpp  perfect_threshold.cpp
src/: chessboard.cpp  chessboard.hpp  instatrack.cpp  instatrack.hpp  threshold.cpp  threshold.hpp  util.cpp
